--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+template.py
+mild_steel_bars/*
+research/*
+artifacts/*
+logs/*
+flowchart/*
+runs/*
